{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 81,
  "lineage": "ac77e06c-5560-bdbc-a183-87ad11761966",
  "resources": [
    {
      "module": "module.ec2_worker",
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02c8959de9191ff8c",
            "arn": "arn:aws:ec2:us-east-1:964591197557:instance/i-018e0301d3e788e84",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "media-intake-worker-profile",
            "id": "i-018e0301d3e788e84",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "media-intake-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e36540f67564832b",
            "private_dns": "ip-10-20-129-74.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.129.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0beaabbd987aad40f",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-097ece24a1b26ccd8",
            "tags": {
              "Environment": "dev",
              "Name": "media-intake-worker"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "media-intake-worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08f6505d98786865d"
            ]
          },
          "dependencies": [
            "aws_dynamodb_table.media_catalog",
            "aws_s3_bucket.processed",
            "aws_s3_bucket.raw",
            "aws_secretsmanager_secret.master",
            "module.ec2_worker.aws_iam_instance_profile.worker_profile",
            "module.ec2_worker.aws_key_pair.default",
            "module.ec2_worker.aws_security_group.worker_sg",
            "module.ec2_worker.data.aws_ami.al2023",
            "module.networking.aws_subnet.private",
            "module.networking.data.aws_availability_zones.available",
            "module.rds.aws_rds_cluster.aurora"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_worker",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964591197557:security-group/sg-08f6505d98786865d",
            "description": "EC2 worker access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f6505d98786865d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "media-intake-worker-sg",
            "name_prefix": "",
            "owner_id": "964591197557",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "worker",
              "Environment": "dev",
              "Project": "media-intake"
            },
            "tags_all": {
              "Component": "worker",
              "Environment": "dev",
              "Project": "media-intake"
            },
            "timeouts": null,
            "vpc_id": "vpc-026cc81bce3862205"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_worker",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aurora_ingress_from_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-673227169",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d5795ce3caa5e429",
            "security_group_rule_id": "sgr-0f0af1eb65afdb413",
            "self": false,
            "source_security_group_id": "sg-08f6505d98786865d",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_worker.aws_security_group.worker_sg",
            "module.networking.aws_vpc.this",
            "module.rds.aws_security_group.aurora_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_worker",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3759996740",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-08f6505d98786865d",
            "security_group_rule_id": "sgr-0f5c8e5c1d3c423de",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_worker.aws_security_group.worker_sg",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_worker",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-778607254",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08f6505d98786865d",
            "security_group_rule_id": "sgr-003ae646de477578b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_worker.aws_security_group.worker_sg",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08166d373f89257e1",
            "arn": "arn:aws:ec2:us-east-1:964591197557:elastic-ip/eipalloc-08166d373f89257e1",
            "association_id": "eipassoc-06ba8cfb88e5672eb",
            "domain": "vpc",
            "id": "eipalloc-08166d373f89257e1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e0b570c488588dd7",
            "private_dns": "ip-10-20-12-34.ec2.internal",
            "private_ip": "10.20.12.34",
            "public_dns": "ec2-52-22-107-103.compute-1.amazonaws.com",
            "public_ip": "52.22.107.103",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-nat-eip-0",
              "Owner": "platform",
              "Project": "media-intake"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-nat-eip-0",
              "Owner": "platform",
              "Project": "media-intake"
            },
            "vpc": true
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964591197557:internet-gateway/igw-059b90b14ea68bc70",
            "id": "igw-059b90b14ea68bc70",
            "owner_id": "964591197557",
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-igw",
              "Owner": "platform",
              "Project": "media-intake"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-igw",
              "Owner": "platform",
              "Project": "media-intake"
            },
            "vpc_id": "vpc-026cc81bce3862205"
          },
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08166d373f89257e1",
            "association_id": "eipassoc-06ba8cfb88e5672eb",
            "connectivity_type": "public",
            "id": "nat-010ed380d5108e071",
            "network_interface_id": "eni-0e0b570c488588dd7",
            "private_ip": "10.20.12.34",
            "public_ip": "52.22.107.103",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-019cbf5efcc26ed78",
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-nat-0",
              "Owner": "platform",
              "Project": "media-intake"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-nat-0",
              "Owner": "platform",
              "Project": "media-intake"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bddf4f9cfe9873881080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-010ed380d5108e071",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bddf4f9cfe987388",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.nat",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-059b90b14ea68bc70",
            "id": "r-rtb-0fd394d0a711acf201080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fd394d0a711acf20",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964591197557:route-table/rtb-0bddf4f9cfe987388",
            "id": "rtb-0bddf4f9cfe987388",
            "owner_id": "964591197557",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-010ed380d5108e071",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-rtb-private-0",
              "Owner": "platform",
              "Project": "media-intake"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-rtb-private-0",
              "Owner": "platform",
              "Project": "media-intake"
            },
            "timeouts": null,
            "vpc_id": "vpc-026cc81bce3862205"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964591197557:route-table/rtb-0fd394d0a711acf20",
            "id": "rtb-0fd394d0a711acf20",
            "owner_id": "964591197557",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059b90b14ea68bc70",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-rtb-public",
              "Owner": "platform",
              "Project": "media-intake"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-rtb-public",
              "Owner": "platform",
              "Project": "media-intake"
            },
            "timeouts": null,
            "vpc_id": "vpc-026cc81bce3862205"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5544d439f792273",
            "route_table_id": "rtb-0bddf4f9cfe987388",
            "subnet_id": "subnet-097ece24a1b26ccd8"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088ecb0f9bf2f91c9",
            "route_table_id": "rtb-0bddf4f9cfe987388",
            "subnet_id": "subnet-052ef5f1dcc757177"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fe3637601c5381c",
            "route_table_id": "rtb-0fd394d0a711acf20",
            "subnet_id": "subnet-019cbf5efcc26ed78"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2c41e629ae76f96",
            "route_table_id": "rtb-0fd394d0a711acf20",
            "subnet_id": "subnet-00bfcb853bb26359c"
          },
          "dependencies": [
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964591197557:subnet/subnet-097ece24a1b26ccd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097ece24a1b26ccd8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "964591197557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-private-0",
              "Owner": "platform",
              "Project": "media-intake",
              "Tier": "private"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-private-0",
              "Owner": "platform",
              "Project": "media-intake",
              "Tier": "private"
            },
            "vpc_id": "vpc-026cc81bce3862205"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964591197557:subnet/subnet-052ef5f1dcc757177",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052ef5f1dcc757177",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "964591197557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-private-1",
              "Owner": "platform",
              "Project": "media-intake",
              "Tier": "private"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-private-1",
              "Owner": "platform",
              "Project": "media-intake",
              "Tier": "private"
            },
            "vpc_id": "vpc-026cc81bce3862205"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964591197557:subnet/subnet-019cbf5efcc26ed78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019cbf5efcc26ed78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "964591197557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-public-0",
              "Owner": "platform",
              "Project": "media-intake",
              "Tier": "public"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-public-0",
              "Owner": "platform",
              "Project": "media-intake",
              "Tier": "public"
            },
            "vpc_id": "vpc-026cc81bce3862205"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964591197557:subnet/subnet-00bfcb853bb26359c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bfcb853bb26359c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "964591197557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-public-1",
              "Owner": "platform",
              "Project": "media-intake",
              "Tier": "public"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-public-1",
              "Owner": "platform",
              "Project": "media-intake",
              "Tier": "public"
            },
            "vpc_id": "vpc-026cc81bce3862205"
          },
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964591197557:vpc/vpc-026cc81bce3862205",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-02166c371405de082",
            "default_route_table_id": "rtb-0512d5d696f3989de",
            "default_security_group_id": "sg-05418015b70044bdd",
            "dhcp_options_id": "dopt-0e6c72a48691f3050",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-026cc81bce3862205",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0512d5d696f3989de",
            "owner_id": "964591197557",
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-vpc",
              "Owner": "platform",
              "Project": "media-intake"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-vpc",
              "Owner": "platform",
              "Project": "media-intake"
            }
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964591197557:vpc-endpoint/vpce-0d4e2f6ac245edc23",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d4e2f6ac245edc23",
            "ip_address_type": "ipv4",
            "owner_id": "964591197557",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0bddf4f9cfe987388"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-vpce-dynamodb",
              "Owner": "platform",
              "Project": "media-intake"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-vpce-dynamodb",
              "Owner": "platform",
              "Project": "media-intake"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-026cc81bce3862205"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964591197557:vpc-endpoint/vpce-090cece3073723b18",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-090cece3073723b18",
            "ip_address_type": "ipv4",
            "owner_id": "964591197557",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0bddf4f9cfe987388"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-vpce-s3",
              "Owner": "platform",
              "Project": "media-intake"
            },
            "tags_all": {
              "Component": "networking",
              "Environment": "dev",
              "Name": "media-intake-vpce-s3",
              "Owner": "platform",
              "Project": "media-intake"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-026cc81bce3862205"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_vpc.this",
            "module.networking.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:964591197557:security-group/sg-0d5795ce3caa5e429",
            "description": "Aurora access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5795ce3caa5e429",
            "ingress": [
              {
                "cidr_blocks": [
                  "174.238.167.212/32"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08f6505d98786865d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "media-intake-aurora-sg",
            "name_prefix": "",
            "owner_id": "964591197557",
            "revoke_rules_on_delete": false,
            "tags": {
              "Component": "database",
              "Project": "media-intake"
            },
            "tags_all": {
              "Component": "database",
              "Project": "media-intake"
            },
            "timeouts": null,
            "vpc_id": "vpc-026cc81bce3862205"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1890971954",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d5795ce3caa5e429",
            "security_group_rule_id": "sgr-095fabef5b753abfd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.rds.aws_security_group.aurora_sg"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "in_from_cidr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "174.238.167.212/32"
            ],
            "description": null,
            "from_port": 5432,
            "id": "sgrule-1392941257",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d5795ce3caa5e429",
            "security_group_rule_id": "sgr-08d8c6130e6fbe363",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.rds.aws_security_group.aurora_sg"
          ]
        }
      ]
    }
  ]
}